# flask---solarapp

./: README.md  app.py  package-lock.json  package.json  pyproject.toml  server.py
static/: script.js  style.css
static/css/: style.css
static/js/: script.js
templates/: index.html
