[tool.poetry]
name = "flask---solarapp"
version = "0.1.0"
description = "Flask application for Energian solar calculator"
authors = ["Jonathan Cheung <jwc122@ic.ac.uk>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8.10"
flask = "^2.3.0"
requests = "^2.7.0"
[tool.poetry.scripts]
flask-app = "server:app"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
